--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -47,7 +47,7 @@
 
         <br>
         <p id="intro"><strong>App overview.</strong></p>
-        <p>The AdCafé is a mobile app designed to allow you to charge advertisers for your time and make money by engaging in their content information. The process will be occurring in 24-hour cycles, meaning the app refreshes its content daily. Once you
+        <p>The process will be occurring in 24-hour cycles, meaning the app refreshes its content daily. Once you
             create your account, you will be required to select categories based on your interests. Then you will be required to select the amount you charge for your time. Once you do so, you can begin engaging in advertiser content. After engaging one
             one or more advertisers, you can make a payout of the amount you've accumulated. Note that we only support M-pesa payouts as of now, so make sure you have or get an mobile M-pesa account.</p>
 
