--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
         <br>
         <p id="intro"><strong>Ad Archives page.</strong></p>
-        <p>The Ad Archives is where all your pinned ads will be located. The app keeps your pined adverts online and are loaded when the page is loaded. When you pin multiple adverts over a given period of time, your Ad Archives will look something like this:</p>
+        <p>The Ad Archives is where all your pinned ads will be located. The app keeps your pinned adverts online and are loaded when the page is loaded. When you pin multiple adverts over a given period of time, your Ad Archives will look something like this:</p>
         <img src="images/ad_archives.png" alt="dashboard" width="25%" height="25%" style="padding-bottom: 70px;">
 
         <br>
