--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <br>
         <p id="intro"><strong>App overview.</strong></p>
         <p>The process will be occurring in 24-hour cycles, meaning the app refreshes its content daily. Once you
-            create your account, you will be required to select categories based on your interests. Then you will be required to select the amount you charge for your time. Once you do so, you can begin engaging in advertiser content. After engaging one
+            create your account, you will be required to select categories based on your interests. Then you will be required to select the amount you charge for your time. Once you do so, you can begin engaging in advertiser content. After engaging
             one or more advertisers, you can make a payout of the amount you've accumulated. Note that we only support M-pesa payouts as of now, so make sure you have or get an mobile M-pesa account.</p>
 
         <br>
