swapped navbar ui for sidebar ui

--- a/index.html
+++ b/index.html
@@ -14,9 +14,19 @@
 </head>
 
 <body>
+  <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <a href="https://adcafe.github.io/Eula/">End User License Agreement</a>
+      <a href="https://adcafe.github.io/AdvertiserTutorial/">Advertiser Tutorial</a>
+  </div>
+
     <div id="navbar">
         <nav class="navbar navbar-expand-xl navbar-light bg-light">
-            <a class="navbar-brand" href="index.html">AdCafé</a>
+          <a class="navbar-brand" onclick="openNav()">
+              <img src="images/nav_img.jpg" width="40" height="30" alt="" >AdCafé.
+          </a>
+
+            <!-- <a class="navbar-brand" href="index.html">AdCafé</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
   <span class="navbar-toggler-icon"></span>
 </button>
@@ -33,11 +43,11 @@
                         <a class="nav-link">Advertising Process.<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
-            </div>
+            </div> -->
         </nav>
     </div>
 
-    <div class="container">
+    <div class="container" id="main"  onclick="closeNav()">
         <p id="byme"><strong>By Bry.</strong></p>
         <p id="ap"><strong>The AdCafé.</strong></p>
 
