--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>User Tutorial</title>
-    <link rel="icon" href="images/ic_launcher5-web.png">
+    <link rel="icon" href="images/boi_ad.png">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/jquery-3.1.1.js"></script>
     <script src="js/scripts.js"></script>
