--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>User Tutorial</title>
-    <link rel="icon" href="images/boi_ad.png">
+    <link rel="icon" href="images/boi_ad2.png">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/jquery-3.1.1.js"></script>
     <script src="js/scripts.js"></script>
@@ -49,6 +49,7 @@
     </div>
 
     <div class="container" id="main"  onclick="closeNav()">
+      <br>
         <p id="byme"><strong>By Bry.</strong></p>
         <p id="ap"><strong>The AdCafé.</strong></p>
 
