added link to app in playstore

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <p id="byme"><strong>By Bry.</strong></p>
         <p id="ap"><strong>The AdCafé.</strong></p>
 
-        <p>The app is a mobile advertising platform designed for users and advertisers to do advertising in a way thats effective and beneficial to both. As a user, the app gives
+        <p>The <a href="https://play.google.com/store/apps/details?id=com.bry.adstudio">app</a> is a mobile advertising platform designed for users and advertisers to do advertising in a way thats effective and beneficial to both. As a user, the app gives
             you the ability to charge advertisers for your time through advertising. This article will help you understand what everything is and what everything does and by the end of it, you should have a good idea on how to use the app.</p>
         <p>If you are looking to advertise in the app, I've prepared a great tutorial on how to do so and can be found <a href="https://adcafe.github.io/AdvertiserTutorial/">here.</a></p>
 
@@ -90,7 +90,7 @@
         <ul>
             <li>Report: This button allows you to report an ad if you find it offensive.</li>
             <li>Pin: This button allows you to pin a given ad if you wish to refer to it in the future.</li>
-            <li>Visit: This button allows you to visit an advertsiers website if you wish to inquire more on a given showcased product or service. Advertisers may or may not add links in their advert, so the icon may not always be clickable.</li>
+            <li>Contact: This button allows you to contact an advertsier if you wish to inquire more on a given showcased product or service. Advertisers may or may not add their contact information in their advert, so the icon may not always be clickable.</li>
             <li>Share: This button allows you to share a given showcased product. Only the image will be shared.</li>
         </ul>
         <p>Below the advert card, there exists 4 buttons:</p>
