--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </br>
         <p><strong>Contact Us.</strong></p>
         <p>If you have any questions or suggestions about the app, its features and capabilities, do not hesitate to contact us:</br>Email: adcafeteam@yahoo.com</p>
-        <p>©Copyright 2018, Bry Onyoni.</p>
+        <p>©Copyright 2018, Color Technologies.</p>
 
     </div>
 </body>
