added expanation for webclick

--- a/index.html
+++ b/index.html
@@ -115,6 +115,15 @@
         <p>Once you engage in the advertisement like in the example, your ad total, all time totals and payout amount will increment. The payout amount will increment by the amount you charge for your time.</p>
 
         <br>
+        <p>Another additional feature in the app is one we call Webclick incentive, an incentive you can receive for visiting an advertisers website. Some advertisers may set an incentive for you to visit and scroll through their website.</p>
+        <video id="video" width="25%" height="25%" controls>
+          <source src="images/webclick_incentive_video.mp4" type="video/mp4">
+        </video>
+        <p>The value of the incentive may vary depending on the advertiser, but the values range between 1Ksh and 100Ksh. Remember, the incentive is not for just visiting the advertisers page, but to visit and SCROLL through their website.</p>
+        <p>Like in the video example, there exists a progress icon(at the top right) that updates when you scroll through the website, then adds the incentive to your totals. However, the progress icon only increases when the you scroll at the right speed. This is to make advertisers sure that you'll actually browse their website.</p>
+
+
+        <br>
         <p id="intro"><strong>The Dashboard.</strong></p>
         <p>Most of the actions and settings of the app are done here, in the dashboard.</p>
         <img src="images/dashboard_top.png" alt="dashboard" width="25%" height="25%" style="padding-bottom: 70px;">
